Bug 64362 - building with --disable-x11-autolaunch gets -Wunused warnings
Summary: building with --disable-x11-autolaunch gets -Wunused warnings
Status: RESOLVED FIXED
Alias: None
Product: dbus
Classification: Unclassified
Component: core (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Simon McVittie
QA Contact:
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2013-05-08 14:38 UTC by Simon McVittie
Modified: 2013-05-10 14:52 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Fix compiler warnings when X11 autolaunch and launchd are both disabled (2.32 KB, patch)
2013-05-08 14:38 UTC, Simon McVittie
Details | Splinter Review
Fix compiler warnings when X11 autolaunch and launchd are both disabled (2.38 KB, patch)
2013-05-09 09:51 UTC, Simon McVittie
Details | Splinter Review
Fix compiler warnings when X11 autolaunch and launchd are both disabled (2.29 KB, patch)
2013-05-09 09:52 UTC, Simon McVittie
Details | Splinter Review

Description Simon McVittie 2013-05-08 14:38:34 UTC
Created attachment 79025 [details] [review]
Fix compiler warnings when X11 autolaunch and launchd are  both disabled

From the department of "if it isn't tested, it doesn't work". I tried
compiling dbus without an assortment of optional features:

    in_builddir ~/build/dbus/legacy ${MR_REPO}/configure \
        --enable-developer --enable-maintainer-mode --enable-tests \
        dbus_cv_sync_sub_and_fetch=no \
        --disable-selinux \
        --disable-inotify \
        --disable-dnotify \
        --disable-epoll \
        --disable-kqueue \
        --disable-launchd \
        --disable-systemd \
        --disable-libaudit \
        --without-valgrind \
        --disable-x11-autolaunch \
        && ...

and it resulted in -Wunused warnings.

The tests also fail with dbus_cv_sync_sub_and_fetch=no, but that's
a separate issue.

---

The test failure is fixed by Attachment 78018 [details], as explained on <https://bugs.freedesktop.org/show_bug.cgi?id=54972#c51>.
Comment 1 Simon McVittie 2013-05-09 09:51:10 UTC
Created attachment 79045 [details] [review]
Fix compiler warnings when X11 autolaunch and launchd are  both disabled

---

As of current master, the tests also pass in the configuration described in the commit message, so I removed the bit about tests failing.
Comment 2 Simon McVittie 2013-05-09 09:52:41 UTC
Created attachment 79046 [details] [review]
Fix compiler warnings when X11 autolaunch and launchd are  both disabled

---

Now with the actually-correct commit message. :-(
Comment 3 Thiago Macieira 2013-05-09 15:31:13 UTC
Comment on attachment 79046 [details] [review]
Fix compiler warnings when X11 autolaunch and launchd are  both disabled

Review of attachment 79046 [details] [review]:
-----------------------------------------------------------------

Ship it!
Comment 4 Simon McVittie 2013-05-10 14:52:25 UTC
Shipped it. 1.7.4.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.